<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jarry.persell.UpdateUserAddressActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutButton"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmailnPhone"
            android:id="@+id/emailBtn"
            android:background="#fbf7f7"
            android:layout_weight="0.51"
            android:textStyle="italic"
            android:textSize="12sp" />

        <Button
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/Adress"
            android:id="@+id/adressBtn"
            android:background="#fbf7f7"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:textColor="#030621" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BankAcc"
            android:id="@+id/bankBtn"
            android:background="#fbf7f7"
            android:layout_weight="0.34"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ShippingAddress"
        android:id="@+id/textView"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/linearLayoutButton"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textColor="#6a7cdf"
        android:textSize="20sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddress"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/Adress" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etPoskod"
        android:layout_below="@+id/etAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/Poskod" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCity"
        android:layout_below="@+id/etPoskod"
        android:layout_alignLeft="@+id/etPoskod"
        android:layout_alignStart="@+id/etPoskod"
        android:layout_marginRight="16dp"
        android:hint="@string/City" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Region"
        android:id="@+id/btnSelectState"
        android:layout_below="@+id/etCity"
        android:layout_marginRight="21dp"
        android:background="@drawable/buttonbg"
        android:textAlignment="center"
        android:layout_alignLeft="@+id/etCity"
        android:layout_alignStart="@+id/etCity"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:id="@+id/btnDone"
        android:layout_below="@+id/btnSelectState"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

</RelativeLayout>
