<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jarry.persell.UpdateUserProfileActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutButton"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmailnPhone"
            android:id="@+id/emailBtn"
            android:layout_weight="0.51"
            android:textStyle="bold|italic"
            android:textSize="15dp"
            android:textColor="#030621"
            android:background="#fbf7f7" />

        <Button
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/Adress"
            android:id="@+id/adressBtn"
            android:textSize="12dp"
            android:textStyle="italic"
            android:background="#fbf7f7" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BankAcc"
            android:id="@+id/bankBtn"
            android:layout_weight="0.34"
            android:textSize="12dp"
            android:textStyle="italic"
            android:background="#fbf7f7" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Contact"
        android:id="@+id/textView"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/linearLayoutButton"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textColor="#6a7cdf"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:hint="@string/EmailAddress" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etPhone"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/PhoneNumber" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:id="@+id/btnDone"
        android:layout_below="@+id/etPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:textStyle="bold" />

</RelativeLayout>
