<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jarry.persell.UpdateUserBankActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutButton"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmailnPhone"
            android:id="@+id/emailBtn"
            android:background="#fbf7f7"
            android:layout_weight="0.51"
            android:textStyle="italic"
            android:textSize="12sp" />

        <Button
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/Adress"
            android:id="@+id/adressBtn"
            android:background="#fbf7f7"
            android:textSize="12sp"
            android:textStyle="italic" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BankAcc"
            android:id="@+id/bankBtn"
            android:background="#fbf7f7"
            android:layout_weight="0.34"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:textColor="#030621" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/BankAcc"
        android:id="@+id/textView"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/linearLayoutButton"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textColor="#6a7cdf"
        android:textSize="20sp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Select Bank Account"
        android:id="@+id/btnBankType"
        android:background="@drawable/buttonbg"
        android:textAlignment="center"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/btnBankType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="297dp"
            android:id="@+id/listView"
            android:layout_gravity="bottom"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

</RelativeLayout>
