<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jarry.persell.PurchaseActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:id="@+id/addressLayout"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ShippingAddress"
                    android:id="@+id/textView"
                    android:layout_marginTop="29dp"
                    android:layout_below="@+id/linearLayoutButton"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold|italic"
                    android:textColor="#6a7cdf"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etAddress"
                    android:layout_below="@+id/textView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="29dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/Adress" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/etPoskod"
                    android:layout_below="@+id/etAddress"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/Poskod" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etCity"
                    android:layout_below="@+id/etPoskod"
                    android:layout_alignLeft="@+id/etPoskod"
                    android:layout_alignStart="@+id/etPoskod"
                    android:layout_marginRight="16dp"
                    android:hint="@string/City" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Region"
                    android:id="@+id/btnSelectState"
                    android:layout_below="@+id/etCity"
                    android:layout_marginRight="21dp"
                    android:background="#fcf8f8"
                    android:textAlignment="textStart"
                    android:layout_alignLeft="@+id/etCity"
                    android:layout_alignStart="@+id/etCity"
                    android:layout_marginLeft="5dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Next"
                    android:id="@+id/btnDone"
                    android:layout_below="@+id/btnSelectState"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/submitLayout"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Owner Bank Account"
                    android:id="@+id/textView5"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold|italic"
                    android:textColor="#6a7cdf"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal" />

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:id="@+id/listView"
                    android:layout_gravity="bottom"
                    android:layout_margin="5dp" />

                <View
                    android:layout_height="2dp"
                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"
                    android:id="@+id/line"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Upload Receipt"
                    android:id="@+id/uploadRec"
                    android:background="@drawable/buttonbg"
                    android:textAlignment="center"
                    android:textColor="#f6140c"
                    android:textStyle="bold|italic"
                    android:textSize="20dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:contentDescription=""
                        android:layout_gravity="center_horizontal" />
                </RelativeLayout>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:id="@+id/submitBtn"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
