<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jarry.persell.itemInsertActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView3" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/horizontalScrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/pic1"
                    android:src="@drawable/camera_icon"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Add Photo"
                    android:id="@+id/text"
                    android:textColor="#0d0202"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/pic2"
                    android:src="@drawable/camera_icon"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Add Photo"
                    android:id="@+id/textView7"
                    android:textColor="#0d0202"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/pic3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/camera_icon"
                    android:contentDescription="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Add Photo"
                    android:id="@+id/textView8"
                    android:textColor="#0d0202"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

        </LinearLayout>
    </HorizontalScrollView>

            <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:id="@+id/categorySelectedBtn"
        android:background="@drawable/buttonbg"
        android:layout_below="@+id/horizontalScrollView"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

            <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Region"
        android:id="@+id/regionBtn"
        android:background="@drawable/buttonbg"
        android:textAlignment="center"
        android:layout_below="@+id/categorySelectedBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/etItemTitle"
                android:layout_below="@+id/regionBtn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/AdTitle"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:inputType="text"
                android:textIsSelectable="false"
                android:textAlignment="textStart" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/etItemTitle"
                android:id="@+id/priceLayout"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="  RM  "
                    android:id="@+id/textView6"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="#0c0b0b"
                    android:textAlignment="center"
                    android:autoText="false"
                    android:layout_marginTop="10dp" />

                <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/etItem"
            android:hint="Price"
            android:textStyle="bold"
            android:inputType="numberDecimal"
                    android:layout_marginTop="10dp" />
            </LinearLayout>


            <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etAd"
            android:layout_below="@+id/priceLayout"
            android:hint="@string/AdDetail"
            android:layout_marginTop="10dp"
            android:textAlignment="textStart" />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
